--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,13 @@
     background-color: blue;
 }
 
+.block {
+    position: absolute;
+    width: 100px;
+    height: 20px;
+    background-color: blue;
+}
+
 .ball {
     position: absolute;
     width: 20px;
