--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,10 @@
 .grid {
-    position: absolute;
+    position: relative;
     width: 560px;
     height: 300px;
     border: solid 1px black;
     margin-top: 100px;
+    background-color: white;
 }
 
 .user {
@@ -14,14 +15,14 @@
 }
 
 .block {
-    position: absolute;
+    position: relative;
     width: 100px;
     height: 20px;
     background-color: blue;
 }
 
 .ball {
-    position: absolute;
+    position: relative;
     width: 20px;
     height: 20px;
     border-radius: 10px;
