--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,10 @@
 .grid {
-    position: relative;
+    position: absolute;
     width: 560px;
     height: 300px;
-    border: solid 1px black;
-    margin-top: 100px;
-    background-color: white;
+    border: 2px solid black;
+    margin: 100px auto;
+    background-color: lightgray;
 }
 
 .user {
@@ -15,14 +15,14 @@
 }
 
 .block {
-    position: relative;
+    position: absolute;
     width: 100px;
     height: 20px;
     background-color: blue;
 }
 
 .ball {
-    position: relative;
+    position: absolute;
     width: 20px;
     height: 20px;
     border-radius: 10px;
