--- a/styles.css
+++ b/styles.css
@@ -28,3 +28,15 @@
     border-radius: 10px;
     background-color: white;
 }
+
+#start-btn {
+    display: flex;
+    margin: 0.5px;
+    padding: 10px;
+    background-color: purple;
+    color: white;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    font-size: 16px;
+}
